--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML5 Website with Bootstrap | Responsive Website Design</title>
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <title>Bootstrap4 | Homepage</title>
     <!-- Bootstrap 4.5 CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Style CSS -->
@@ -21,7 +20,7 @@
     <div class="top-bar">
         <div class="container col-12 text-center">
             <p>
-                <a href="tel:+6474485732">Call us at (647) 448-5732</a></p>
+                <a href="tel:+6474485732">Call us at <span class="area-code">(647) 448-5732</span></a></p>
         </div>
     </div>
 
@@ -31,9 +30,9 @@
     <!-- Navigation -->
     <nav class="navbar bg-light navbar-light navbar-expand-lg">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt="Logo" title="Logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="img/logotest1.png" alt="Logo" title="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
+                <span><i class="fas fa-hamburger fa-2x"></i></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -59,11 +58,11 @@
 
     <!-- Image Carousel -->
     <!-- data-interval is used to determine the speed the carousel is moving -->
-    <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="500000">
+    <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="4000">
 
         <!-- Carousel Content -->
         <div class="carousel-inner">
-            <div class="carousel-item active"><img src="img/carousel/1.jpg" alt="" class="w-100">
+            <div class="carousel-item active"><img src="img/carousel/shoe3.png" alt="" class="w-100">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-center">
@@ -78,19 +77,19 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item"><img src="img/carousel/2.jpg" alt="" class="w-100">
+            <div class="carousel-item"><img src="img/carousel/shoe4.png" alt="" class="w-100">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-end text-right">
                             <div class="col-5 bg-custom d-none d-md-block py-3 mx-0 pr-3">
                                 <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-danger btn-lg mr-2">See Phone</a>
+                                <a href="#" class="btn btn-primary btn-lg mr-2">See Phone</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item"><img src="img/carousel/3.jpg" alt="" class="w-100">
+            <div class="carousel-item"><img src="img/carousel/shoe2.png" alt="" class="w-100">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-startn text-left">
@@ -98,7 +97,7 @@
                                 <h3 class="pb-3">Built for tablets</h3>
                                 <p class="lead">Lorem ipsum dolor sit amet consectetur
                                 </p>
-                                <a href="#" class="btn btn-primary btn-lg ml-2">Start Now</a>
+                                <a href="#" class="btn btn-danger btn-lg ml-2">Start Now</a>
                             </div>
                         </div>
                     </div>
@@ -127,7 +126,7 @@
     <div class="col-12 text-center mt-5">
         <h1 class="text-dark pt-4">Built with Ease</h1>
         <div class="border-top border-primary w-25 mx-auto my-3">
-            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p class="lead mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
 
@@ -135,20 +134,20 @@
     <div class="container">
         <div class="row my-5">
             <div class="col-md-4 my-4">
-                <img src="img/1.jpg" alt="" class="w-100">
-                <h4 class="my-4">"Amazing! Incredible!</h4>
+                <img src="img/boots.png" alt="" class="w-100">
+                <h4 class="my-4">"Amazing Boots!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
                 <ahref="#" class="a btn btn-outline-dark btn-md">Our Story</ahref=>
             </div>
             <div class="col-md-4 my-4">
-                <img src="img/2.jpg" alt="" class="w-100">
-                <h4 class="my-4">"Amazing! Incredible!</h4>
+                <img src="img/fancy.png" alt="" class="w-100">
+                <h4 class="my-4">"Super Fancy!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
                 <ahref="#" class="a btn btn-outline-dark btn-md">Our Story</ahref=>
             </div>
             <div class="col-md-4 my-4">
-                <img src="img/3.jpg" alt="" class="w-100">
-                <h4 class="my-4">"Amazing! Incredible!</h4>
+                <img src="img/outdoor.png" alt="" class="w-100">
+                <h4 class="my-4">"Very Durable!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
                 <ahref="#" class="a btn btn-outline-dark btn-md">Our Story</ahref=>
             </div>
@@ -173,7 +172,9 @@
         </div>
 
         <div class="fixed-wrap">
-            <div class="fixed"></div>
+            <div class="overlay">
+                <div class="fixed"></div>
+            </div>
         </div>
     </div>
 
@@ -209,7 +210,7 @@
                 <a href="#" target="_blank" class="btn btn-outline-dark btn-lg">The Agency Theme</a>
             </div>
 
-            <div class="col-lg-8"><img src="img/code.jpg" alt="" class="w-100"></div>
+            <div class="col-lg-8"><img src="img/loud.png" alt="" class="w-100"></div>
         </div>
     </div>
 
@@ -237,7 +238,7 @@
         <div class="container">
             <div class="row text-light text-center py-4 justify-content-center">
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <img src="img/logo-white.png" alt="">
+                    <img src="img/logotest1.png" alt="">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima veniam, ut sit ipsam quasi dolorum dolor sed laudantium aliquam! Ipsam.</p>
                     <ul class="social pt-3">
                         <li><a href="" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
