--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap4 | Homepage</title>
     <!-- Bootstrap 4.5 CSS -->
-    <link rel="stylesheet" href="bootstrap.min.108cc16f.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Style CSS -->
-    <link rel="stylesheet" href="style.78032849.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
-    <script src="bootstrap.min.108cc16f.js"></script>
-    <script src="style.78032849.js"></script>
 </head>
 
 <body>
@@ -58,7 +56,7 @@
     <!-- Navigation -->
     <nav class="navbar bg-light navbar-light navbar-expand-lg">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="./logotest1.dea6619e.png" alt="Logo" title="Logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="img/logotest1.png" alt="Logo" title="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span><i class="fas fa-hamburger fa-2x"></i></span>
         </button>
@@ -91,7 +89,7 @@
 
         <!-- Carousel Content -->
         <div class="carousel-inner">
-            <div class="carousel-item active"><img src="shoe3.592301d3.png" alt="" class="w-100">
+            <div class="carousel-item active"><img src="img/carousel/shoe3.png" alt="" class="w-100 carousel-img-1">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-center">
@@ -106,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item"><img src="shoe4.affeb721.png" alt="" class="w-100">
+            <div class="carousel-item"><img src="img/carousel/shoe4.png" alt="" class="w-100 carousel-img-2">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-end text-right">
@@ -118,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item"><img src="shoe2.2e60eefb.png" alt="" class="w-100">
+            <div class="carousel-item"><img src="img/carousel/shoe2.png" alt="" class="w-100 carousel-img-3">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-startn text-left">
@@ -152,9 +150,9 @@
 
 
     <!-- Main Page Heading -->
-    <div class="col-12 text-center mt-5">
+    <div class="first-header col-12 text-center mt-5">
         <h1 class="text-dark pt-4">Built with Ease</h1>
-        <div class="border-top border-primary w-25 mx-auto my-3">
+        <div class="border-top border-primary w-50 mx-auto my-3">
             <p class="lead mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
@@ -163,19 +161,19 @@
     <div class="container">
         <div class="row my-5">
             <div class="col-md-4 my-4 tcsection">
-                <img src="boots.d439eea7.png" alt="" class="w-100">
+                <img src="img/boots.png" alt="" class="w-100">
                 <h4 class="my-4">"Amazing Boots!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
                 <a href="#" class="btn btn-outline-dark btn-md">Our Story</a>
             </div>
             <div class="col-md-4 my-4 tcsection">
-                <img src="fancy.b5b3a05e.png" alt="" class="w-100">
+                <img src="img/fancy.png" alt="" class="w-100">
                 <h4 class="my-4">"Super Fancy!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
                 <a href="#" class="btn btn-outline-dark btn-md">Our Story</a>
             </div>
             <div class="col-md-4 my-4 tcsection">
-                <img src="outdoor.3da6fe6f.png" alt="" class="w-100">
+                <img src="img/outdoor.png" alt="" class="w-100">
                 <h4 class="my-4">"Very Durable!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
                 <a href="#" class="btn btn-outline-dark btn-md">Our Story</a>
@@ -215,14 +213,14 @@
     <div class="collapse" id="emoji">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop9.b8dffe8e.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop2.f3816b78.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop3.c3c1db6f.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop4.3612c2a1.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop5.90f88d43.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop6.a3d90c3c.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop7.426ebab1.png" alt="" class="w-100 pt-4"></div>
-                <div class="col-sm-6 col-md-4 col-lg-3"><img src="drop8.c4c7c52c.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop9.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop2.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop3.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop4.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop5.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop6.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop7.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop8.png" alt="" class="w-100 pt-4"></div>
             </div>
         </div>
     </div>
@@ -230,10 +228,10 @@
 
     <!-- Modal Popup -->
     <div class="modal fade" id="modal1">
-        <div class="modal-dialog modal-dialog-centered"><img src="panda.9ed80acc.gif" alt="" class="w-100"></div>
+        <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
     </div>
     <div class="modal fade" id="modal2">
-        <div class="modal-dialog modal-dialog-centered"><img src="poo.a56dfa97.gif" alt="" class="w-100"></div>
+        <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/poo.gif" alt="" class="w-100"></div>
     </div>
 
 
@@ -246,7 +244,7 @@
                 <a href="#" target="_blank" class="btn btn-outline-dark btn-lg">The Agency Theme</a>
             </div>
 
-            <div class="col-lg-8"><img src="loud.ab4698c8.png" alt="" class="w-100"></div>
+            <div class="col-lg-8"><img src="img/loud.png" alt="" class="w-100"></div>
         </div>
     </div>
 
@@ -274,7 +272,7 @@
         <div class="container">
             <div class="row text-light text-center py-4 justify-content-center">
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <img src="logotest1.dea6619e.png" alt="">
+                    <img src="img/logotest1.png" alt="">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima veniam, ut sit ipsam quasi dolorum dolor sed laudantium aliquam! Ipsam.</p>
                     <ul class="social pt-3">
                         <li><a href="" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
@@ -303,13 +301,13 @@
     <!-- Script Source Files -->
 
     <!-- jQuery -->
-    <script src="jquery-3.5.1.min.98c14ecd.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap 4.5 JS -->
-    <script src="bootstrap.min.fdb78abe.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Popper JS -->
-    <script src="popper.min.a535ab6a.js"></script>
+    <script src="js/popper.min.js"></script>
     <!-- Font Awesome -->
-    <script src="all.min.248a9b6c.js"></script>
+    <script src="js/all.min.js"></script>
     <!---Newsletter Modal-->
     <script>
         $(document).ready(function() {
