--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,32 @@
 </head>
 
 <body>
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Join our Newsletter</h5>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Subscribe to our mailing list to get the latest updates straight in your inbox.</p>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email Address">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Popup 
+        <div class="modal fade" id="modal1">
+            <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
+        </div> -->
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -56,13 +82,14 @@
     <!-- End Navigation -->
 
 
+
     <!-- Image Carousel -->
     <!-- data-interval is used to determine the speed the carousel is moving -->
     <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="4000">
 
         <!-- Carousel Content -->
         <div class="carousel-inner">
-            <div class="carousel-item active"><img src="img/carousel/shoe3.png" alt="" class="w-100">
+            <div class="carousel-item active"><img src="img/carousel/shoe3.png" alt="" class="w-100 carousel-img-1">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-center">
@@ -70,14 +97,14 @@
                                 <h1>Bootstrap</h1>
                                 <div class="border-top border-primary w-50 mx-auto my-3"></div>
                                 <h3 class="pb-3">Complete Website Design</h3>
-                                <a href="#" class="btn btn-danger btn-lg mr-2">View Demo</a>
+                                <a href="#" class="btn btn-secondary btn-lg mr-2">View Demo</a>
                                 <a href="#" class="btn btn-primary btn-lg ml-2">Start Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item"><img src="img/carousel/shoe4.png" alt="" class="w-100">
+            <div class="carousel-item"><img src="img/carousel/shoe4.png" alt="" class="w-100 carousel-img-2">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-end text-right">
@@ -89,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item"><img src="img/carousel/shoe2.png" alt="" class="w-100">
+            <div class="carousel-item"><img src="img/carousel/shoe2.png" alt="" class="w-100 carousel-img-3">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-startn text-left">
@@ -97,7 +124,7 @@
                                 <h3 class="pb-3">Built for tablets</h3>
                                 <p class="lead">Lorem ipsum dolor sit amet consectetur
                                 </p>
-                                <a href="#" class="btn btn-danger btn-lg ml-2">Start Now</a>
+                                <a href="#" class="btn btn-secondary btn-lg ml-2">Start Now</a>
                             </div>
                         </div>
                     </div>
@@ -123,9 +150,9 @@
 
 
     <!-- Main Page Heading -->
-    <div class="col-12 text-center mt-5">
+    <div class="first-header col-12 text-center mt-5">
         <h1 class="text-dark pt-4">Built with Ease</h1>
-        <div class="border-top border-primary w-25 mx-auto my-3">
+        <div class="border-top border-primary w-50 mx-auto my-3">
             <p class="lead mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
@@ -133,23 +160,23 @@
     <!-- Three Column Section -->
     <div class="container">
         <div class="row my-5">
-            <div class="col-md-4 my-4">
+            <div class="col-md-4 my-4 tcsection">
                 <img src="img/boots.png" alt="" class="w-100">
                 <h4 class="my-4">"Amazing Boots!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
-                <ahref="#" class="a btn btn-outline-dark btn-md">Our Story</ahref=>
+                <a href="#" class="btn btn-outline-dark btn-md">Our Story</a>
             </div>
-            <div class="col-md-4 my-4">
+            <div class="col-md-4 my-4 tcsection">
                 <img src="img/fancy.png" alt="" class="w-100">
                 <h4 class="my-4">"Super Fancy!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
-                <ahref="#" class="a btn btn-outline-dark btn-md">Our Story</ahref=>
+                <a href="#" class="btn btn-outline-dark btn-md">Our Story</a>
             </div>
-            <div class="col-md-4 my-4">
+            <div class="col-md-4 my-4 tcsection">
                 <img src="img/outdoor.png" alt="" class="w-100">
                 <h4 class="my-4">"Very Durable!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eveniet a maiores debitis, veniam facilis possimus pariatur non nemo aliquam!</p>
-                <ahref="#" class="a btn btn-outline-dark btn-md">Our Story</ahref=>
+                <a href="#" class="btn btn-outline-dark btn-md">Our Story</a>
             </div>
         </div>
     </div>
@@ -157,7 +184,7 @@
 
 
     <!-- Emoji Navbar First -->
-    <a href="#emoji" class="navbar bg-primary sticky-top emoji" role="button" data-target="collapse"></a>
+    <a href="#emoji" class="navbar bg-primary sticky-top emoji" role="button" data-toggle="collapse"></a>
 
     <!-- Start Fixed Background IMG -->
     <!--Parallax container-->
@@ -165,9 +192,9 @@
         <div class="row text-light py-5">
             <div class="col-12 text-center">
                 <h1>Advance to next level</h1>
-                <h3 class="py-4">...see what's on the other side</h3>
-                <button type="button" data-toggle="modal" data-target="#modal1" class="btn btn-primary btn-lg ml-2">Blue Pill</button>
-                <button type="button" data-toggle="modal" data-target="#modal1" class="btn btn-danger btn-lg mr-2">Red Pill</button>
+                <h3 class="py-4">...Two different subscription plans</h3>
+                <button type="button" data-toggle="modal" data-target="#modal1" class="btn btn-primary btn-lg ml-2">Super</button>
+                <button type="button" data-toggle="modal" data-target="#modal2" class="btn btn-secondary btn-lg mr-2">Basic</button>
             </div>
         </div>
 
@@ -186,10 +213,14 @@
     <div class="collapse" id="emoji">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-md-3"><img src="img/emoji/chicken.gif" alt="" class="w-100"></div>
-                <div class="col-sm-6 col-md-3"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
-                <div class="col-sm-6 col-md-3"><img src="img/emoji/poo.gif" alt="" class="w-100"></div>
-                <div class="col-sm-6 col-md-3"><img src="img/emoji/unicorn.gif" alt="" class="w-100"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop9.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop2.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop3.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop4.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop5.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop6.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop7.png" alt="" class="w-100 pt-4"></div>
+                <div class="col-sm-6 col-md-4 col-lg-3"><img src="img/emoji/drop8.png" alt="" class="w-100 pt-4"></div>
             </div>
         </div>
     </div>
@@ -198,6 +229,9 @@
     <!-- Modal Popup -->
     <div class="modal fade" id="modal1">
         <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
+    </div>
+    <div class="modal fade" id="modal2">
+        <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/poo.gif" alt="" class="w-100"></div>
     </div>
 
 
@@ -274,6 +308,12 @@
     <script src="js/popper.min.js"></script>
     <!-- Font Awesome -->
     <script src="js/all.min.js"></script>
+    <!---Newsletter Modal-->
+    <script>
+        $(document).ready(function() {
+            $("#myModal").modal('show');
+        });
+    </script>
 
     <!-- End Script Source Files -->
 </body>
