--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+    <!--Newsletter Modal-->
     <div id="myModal" class="modal fade">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -24,23 +26,20 @@
                 </div>
                 <div class="modal-body">
                     <p>Subscribe to our mailing list to get the latest updates straight in your inbox.</p>
-                    <form>
+                    <form onsubmit="return false">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Name">
+                            <input type="text" class="form-control" placeholder="Name" required>
                         </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email Address">
+                        <div class="form-group pb-2">
+                            <input type="email" class="form-control" placeholder="Email Address" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Subscribe</button>
+                        <button type="submit" class="btn btn-primary ">Subscribe</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Modal Popup 
-        <div class="modal fade" id="modal1">
-            <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
-        </div> -->
+
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -58,7 +57,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand"><img src="img/logotest1.png" alt="Logo" title="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span><i class="fas fa-hamburger fa-2x"></i></span>
+                <span><i class="fas fa-bars fa-2x"></i></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -89,7 +88,7 @@
 
         <!-- Carousel Content -->
         <div class="carousel-inner">
-            <div class="carousel-item active"><img src="img/carousel/shoe3.png" alt="" class="w-100 carousel-img-1">
+            <div class="carousel-item active"><img src="img/carousel/shoe1.png" alt="" class="w-100 carousel-img-1">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-center">
@@ -228,10 +227,44 @@
 
     <!-- Modal Popup -->
     <div class="modal fade" id="modal1">
-        <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/panda.gif" alt="" class="w-100"></div>
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content parallax-modal">
+                <div class="modal-header ">
+                    <h4 class="modal-title ">Super Subscription</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                </div>
+                <div class="modal-body">
+                    <h2 class="py-2">$80/mo</h2>
+                    <h5>This Subscription offers you everyday essentials and more. For the hypebeast that cant be caught in the same clothes.</h5>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Subscribe</button>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="modal fade" id="modal2">
-        <div class="modal-dialog modal-dialog-centered"><img src="img/emoji/poo.gif" alt="" class="w-100"></div>
+        <div class="modal-dialog modal-dialog-centered">
+
+            <div class="modal-content parallax-modal">
+                <div class="modal-header ">
+                    <h4 class="modal-title ">Basic Subscription</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    <h2 class="py-2">$40/mo</h2>
+                    <h5>This Subscription offers you everyday essentials. For the person that doesn't like to stand out.</h5>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Subscribe</button>
+                </div>
+            </div>
+
+        </div>
     </div>
 
 
@@ -309,11 +342,8 @@
     <!-- Font Awesome -->
     <script src="js/all.min.js"></script>
     <!---Newsletter Modal-->
-    <script>
-        $(document).ready(function() {
-            $("#myModal").modal('show');
-        });
-    </script>
+    <script src="js/_newsletter.js"></script>
+
 
     <!-- End Script Source Files -->
 </body>
