--- a/index.html
+++ b/index.html
@@ -342,7 +342,12 @@
     <!-- Font Awesome -->
     <script src="js/all.min.js"></script>
     <!---Newsletter Modal-->
-    <script src="js/_newsletter.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#myModal").modal('show');
+        });
+    </script>
+
 
 
     <!-- End Script Source Files -->
